--- a/resources/css/qh_styles.css
+++ b/resources/css/qh_styles.css
@@ -143,8 +143,8 @@ header{
 .heading-main-box{
     position: absolute;
     top: 50%;
-    padding-left: 400px;
-    transform: translate(-45%,-55%);
+    left: 30%
+    transform: translate(-35%,-55%);
     width: 1100px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
